Fixed issues with getCloneWithModifiedData